--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,13 @@ jobs:
         with:
           asdf_branch: v0.9.0
 
+      - name: Install Golang (for installing odo from Git refs)
+        run: |
+          asdf plugin-add golang https://github.com/kennyp/asdf-golang.git
+          asdf install golang 1.16.15
+          asdf global golang 1.16.15
+
+      # TODO(rm3l): remove this once asdf-odo repo becomes public
       - name: Install plugin manually
         run: |
           mkdir -p ~/.asdf/plugins
