--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  ODO_CONFIG: "/.config/odo/settings.yaml"
+  ODO_CONFIG_RELATIVE_TO_HOME: "/.config/odo/settings.yaml"
 
 jobs:
   plugin_test:
@@ -18,8 +18,6 @@ jobs:
           - ubuntu-latest
           - macos-latest
     runs-on: ${{ matrix.os }}
-    env:
-      GLOBALODOCONFIG: "${{ env:HOME}}/${{ env:ODO_CONFIG }}"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -35,10 +33,14 @@ jobs:
           mkdir -p ~/.asdf/plugins
           ln -sf "$(pwd)" ~/.asdf/plugins/odo
 
+      - name: Set environment variable
+        run: |
+          echo "GLOBALODOCONFIG=$HOME/$ODO_CONFIG_RELATIVE_TO_HOME" >> $GITHUB_ENV
+
       - name: Create odo preferences file
         run: |
-          mkdir -p "$(dirname ${HOME}/$ODO_CONFIG)"
-          cat <<EOF > "${HOME}/$ODO_CONFIG"
+          mkdir -p "$(dirname $GLOBALODOCONFIG)"
+          cat <<EOF > "$GLOBALODOCONFIG"
           kind: Preference
           apiversion: odo.dev/v1alpha1
           OdoSettings:
@@ -60,8 +62,6 @@ jobs:
         os: [ubuntu-latest, macos-latest]
         git_ref: [v2, 7618e8f3e4385bdca620e934c0b27d8fcc878099]
     runs-on: ${{ matrix.os }}
-    env:
-      GLOBALODOCONFIG: "${{ env:HOME}}/${{ env:ODO_CONFIG }}"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -83,10 +83,14 @@ jobs:
           mkdir -p ~/.asdf/plugins
           ln -sf "$(pwd)" ~/.asdf/plugins/odo
 
+      - name: Set environment variable
+        run: |
+          echo "GLOBALODOCONFIG=$HOME/$ODO_CONFIG_RELATIVE_TO_HOME" >> $GITHUB_ENV
+
       - name: Create odo preferences file
         run: |
-          mkdir -p "$(dirname ${HOME}/$ODO_CONFIG)"
-          cat <<EOF > "${HOME}/$ODO_CONFIG"
+          mkdir -p "$(dirname $GLOBALODOCONFIG)"
+          cat <<EOF > "$GLOBALODOCONFIG"
           kind: Preference
           apiversion: odo.dev/v1alpha1
           OdoSettings:
@@ -120,7 +124,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       ASDF_GITHUB_REPO_FOR_ODO: "https://github.com/rm3l/odo"
-      GLOBALODOCONFIG: "${{ env:HOME}}/${{ env:ODO_CONFIG }}"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -142,10 +145,14 @@ jobs:
           mkdir -p ~/.asdf/plugins
           ln -sf "$(pwd)" ~/.asdf/plugins/odo
 
+      - name: Set environment variable
+        run: |
+          echo "GLOBALODOCONFIG=$HOME/$ODO_CONFIG_RELATIVE_TO_HOME" >> $GITHUB_ENV
+
       - name: Create odo preferences file
         run: |
-          mkdir -p "$(dirname ${HOME}/$ODO_CONFIG)"
-          cat <<EOF > "${HOME}/$ODO_CONFIG"
+          mkdir -p "$(dirname $GLOBALODOCONFIG)"
+          cat <<EOF > "$GLOBALODOCONFIG"
           kind: Preference
           apiversion: odo.dev/v1alpha1
           OdoSettings:
