--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,11 +108,8 @@ jobs:
         env:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
-          odo version
-          version_output=$(odo version)
-          echo "version_output=$version_output"
-          grep "($GIT_REF)" <<< "$version"
-          if [[ $? != 0 ]]; then
+          res=$(odo version | grep "($GIT_REF)" || echo false)
+          if [[ "$res" == "false" ]]; then
             echo "Expected 'odo version' to contain \"($GIT_REF)\", but got $version_output"
             exit 1
           fi
@@ -172,11 +169,8 @@ jobs:
         env:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
-          odo version
-          version_output=$(odo version)
-          echo "version_output=$version_output"
-          grep "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" <<< "$version"
-          if [[ $? != 0 ]]; then
+          res=$(odo version | grep "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" || echo false)
+          if [[ "$res" == "false" ]]; then
             echo "Expected 'odo version' to contain \"(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})\", but got $version_output"
             exit 1
           fi
