--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,7 @@ jobs:
     name: asdf plugin test
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -56,10 +54,10 @@ jobs:
         run: odo version
 
   plugin_test_git_ref_upstream_repo:
-    name: asdf plugin test using Git refs
+    name: asdf plugin test using Git refs from upstream repo
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         git_ref: [v2, 7618e8f3e4385bdca620e934c0b27d8fcc878099]
     runs-on: ${{ matrix.os }}
     steps:
@@ -115,10 +113,10 @@ jobs:
           fi
 
   plugin_test_git_ref_fork_repo:
-    name: asdf plugin test using Git refs
+    name: asdf plugin test using Git refs from fork
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         git_ref: [docs-getting-started-order, 2c6c9f1a418c6620026a1d9908f268083a706e35]
     runs-on: ${{ matrix.os }}
     env:
