--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install plugin manually
         run: |
           mkdir -p ~/.asdf/plugins
-          ln -sf "$(pwd)" ~/.asdf/plugins/odo
+          cp -r "$(pwd)" ~/.asdf/plugins/odo
 
       - name: Set environment variable
         run: |
@@ -79,7 +79,7 @@ jobs:
       - name: Install plugin manually
         run: |
           mkdir -p ~/.asdf/plugins
-          ln -sf "$(pwd)" ~/.asdf/plugins/odo
+          cp -r "$(pwd)" ~/.asdf/plugins/odo
 
       - name: Set environment variable
         run: |
@@ -140,7 +140,7 @@ jobs:
       - name: Install plugin manually
         run: |
           mkdir -p ~/.asdf/plugins
-          ln -sf "$(pwd)" ~/.asdf/plugins/odo
+          cp -r "$(pwd)" ~/.asdf/plugins/odo
 
       - name: Set environment variable
         run: |
