--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     name: test
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -26,11 +26,13 @@ jobs:
       - name: Install plugin manually
         run: |
           mkdir -p ~/.asdf/plugins
-          cp -r "$(pwd)" ~/.asdf/plugins/odo
+          ln -snf "$(pwd)" ~/.asdf/plugins/odo
 
       - name: Set path to odo config file
         run: |
-          echo "GLOBALODOCONFIG=$(pwd)/.github/.odo_config.yaml" >> $GITHUB_ENV
+          mkdir -p "${HOME}/.config/odo"
+          cp "$(pwd)/.github/.odo_config.yaml" "${HOME}/.config/odo/config.yaml"
+          echo "GLOBALODOCONFIG=${HOME}/.config/odo/config.yaml" >> $GITHUB_ENV
 
       - name: Install latest odo
         run: |
@@ -44,7 +46,7 @@ jobs:
     name: Git refs from upstream repo
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         git_ref: [v2, 7618e8f3e4385bdca620e934c0b27d8fcc878099]
     runs-on: ${{ matrix.os }}
     steps:
@@ -66,11 +68,13 @@ jobs:
       - name: Install plugin manually
         run: |
           mkdir -p ~/.asdf/plugins
-          cp -r "$(pwd)" ~/.asdf/plugins/odo
+          ln -sf "$(pwd)" ~/.asdf/plugins/odo
 
       - name: Set path to odo config file
         run: |
-          echo "GLOBALODOCONFIG=$(pwd)/.github/.odo_config.yaml" >> $GITHUB_ENV
+          mkdir -p "${HOME}/.config/odo"
+          cp "$(pwd)/.github/.odo_config.yaml" "${HOME}/.config/odo/config.yaml"
+          echo "GLOBALODOCONFIG=${HOME}/.config/odo/config.yaml" >> $GITHUB_ENV
 
       - name: Install odo using Git ref (${{ matrix.git_ref }}) from upstream repo
         env:
@@ -93,7 +97,7 @@ jobs:
     name: Git refs from fork
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         git_ref: [docs-getting-started-order, 2c6c9f1a418c6620026a1d9908f268083a706e35]
     runs-on: ${{ matrix.os }}
     env:
@@ -117,11 +121,13 @@ jobs:
       - name: Install plugin manually
         run: |
           mkdir -p ~/.asdf/plugins
-          cp -r "$(pwd)" ~/.asdf/plugins/odo
+          ln -sf "$(pwd)" ~/.asdf/plugins/odo
 
       - name: Set path to odo config file
         run: |
-          echo "GLOBALODOCONFIG=$(pwd)/.github/.odo_config.yaml" >> $GITHUB_ENV
+          mkdir -p "${HOME}/.config/odo"
+          cp "$(pwd)/.github/.odo_config.yaml" "${HOME}/.config/odo/config.yaml"
+          echo "GLOBALODOCONFIG=${HOME}/.config/odo/config.yaml" >> $GITHUB_ENV
 
       - name: Download and install odo using Git ref (${{ matrix.git_ref }}) from fork repo
         env:
