--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -10,6 +10,10 @@ defaults:
   run:
       shell: wsl-bash {0}
 
+env:
+  # Change version number prior to tagging new releases of this plugin
+  ASDF_ODO_USER_AGENT: "asdf-odo/1.2.0 (CI)"
+
 jobs:
   plugin_test:
     # Disable job forever, since neither ASDF nor Vampire/setup-wsl support WSL at this time:
