--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   # Change version number prior to tagging new releases of this plugin
-  ASDF_ODO_USER_AGENT: "asdf-odo/1.2.0 (CI)"
+  ASDF_ODO_USER_AGENT: "asdf-odo/1.3.0-dev (CI)"
 
 jobs:
   plugin_test:
