--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -102,6 +102,7 @@ jobs:
           export GLOBALODOCONFIG="${HOME}/.config/odo/config.yaml"
           res=$(odo version | grep "($GIT_REF)" || echo false)
           if [[ "$res" == "false" ]]; then
+            version_output=$(odo version 2>&1 || true)
             echo "Expected 'odo version' to contain \"($GIT_REF)\", but got $version_output"
             exit 1
           fi
@@ -158,6 +159,7 @@ jobs:
           export GLOBALODOCONFIG="${HOME}/.config/odo/config.yaml"
           res=$(odo version | grep "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" || echo false)
           if [[ "$res" == "false" ]]; then
+            version_output=$(odo version 2>&1 || true)
             echo "Expected 'odo version' to contain \"(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})\", but got $version_output"
             exit 1
           fi
