chore(CI): Enable verbose mode

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -10,6 +10,9 @@ defaults:
   run:
       shell: wsl-bash {0}
 
+env:
+  ASDF_ODO_VERBOSE: "true"
+
 jobs:
   plugin_test:
     # Disable job forever, since neither ASDF nor Vampire/setup-wsl support WSL at this time:
