--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,10 +78,10 @@ jobs:
 
       - name: Test odo v${{ matrix.version }}
         run: |
-          res=$(odo version | grep "(v${{ matrix.version }})" || echo false)
+          res=$(odo version | grep -F "v${{ matrix.version }}" || echo false)
           if [[ "$res" == "false" ]]; then
             version_output=$(odo version 2>&1 || true)
-            echo "Expected 'odo version' to contain \"(v${{ matrix.version }})\", but got $version_output"
+            echo "Expected 'odo version' to contain \"v${{ matrix.version }}\", but got $version_output"
             exit 1
           fi
 
@@ -129,7 +129,7 @@ jobs:
         env:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
-          res=$(odo version | grep "($GIT_REF)" || echo false)
+          res=$(odo version | grep -F "($GIT_REF)" || echo false)
           if [[ "$res" == "false" ]]; then
             version_output=$(odo version 2>&1 || true)
             echo "Expected 'odo version' to contain \"($GIT_REF)\", but got $version_output"
@@ -182,7 +182,7 @@ jobs:
         env:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
-          res=$(odo version | grep "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" || echo false)
+          res=$(odo version | grep -F "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" || echo false)
           if [[ "$res" == "false" ]]; then
             version_output=$(odo version 2>&1 || true)
             echo "Expected 'odo version' to contain \"(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})\", but got $version_output"
