--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -99,7 +99,7 @@ jobs:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
           export GLOBALODOCONFIG="${HOME}/.config/odo/config.yaml"
-          res=$(odo version | grep "($GIT_REF)" || echo false)
+          res=$(odo version | grep -F "($GIT_REF)" || echo false)
           if [[ "$res" == "false" ]]; then
             version_output=$(odo version 2>&1 || true)
             echo "Expected 'odo version' to contain \"($GIT_REF)\", but got $version_output"
@@ -156,7 +156,7 @@ jobs:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
           export GLOBALODOCONFIG="${HOME}/.config/odo/config.yaml"
-          res=$(odo version | grep "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" || echo false)
+          res=$(odo version | grep -F "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" || echo false)
           if [[ "$res" == "false" ]]; then
             version_output=$(odo version 2>&1 || true)
             echo "Expected 'odo version' to contain \"(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})\", but got $version_output"
