--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        version: ["2.0.0", "3.0.0-alpha1"]
+        version: ["2.0.0", "2.5.1", "3.0.0-beta2"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
