--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 env:
   ASDF_ODO_VERBOSE: "true"
@@ -24,7 +26,7 @@ jobs:
       - name: Install asdf
         uses: asdf-vm/actions/setup@v1
         with:
-          asdf_branch: v0.9.0
+          asdf_branch: v0.10.2
 
       - name: Install plugin manually
         run: |
@@ -51,7 +53,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        version: ["2.0.0", "2.5.1", "3.0.0-beta2"]
+        version: ["2.0.0", "2.5.1", "3.0.0-beta3", "3.0.0-rc1"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -60,7 +62,7 @@ jobs:
       - name: Install asdf
         uses: asdf-vm/actions/setup@v1
         with:
-          asdf_branch: v0.9.0
+          asdf_branch: v0.10.2
 
       - name: Install plugin manually
         run: |
@@ -102,13 +104,13 @@ jobs:
       - name: Install asdf
         uses: asdf-vm/actions/setup@v1
         with:
-          asdf_branch: v0.9.0
+          asdf_branch: v0.10.2
 
       - name: Install Golang (for installing odo from Git refs)
         run: |
           asdf plugin-add golang https://github.com/kennyp/asdf-golang.git
-          asdf install golang 1.16.15
-          asdf global golang 1.16.15
+          asdf install golang 1.17.13
+          asdf global golang 1.17.13
 
       - name: Install plugin manually
         run: |
@@ -156,13 +158,13 @@ jobs:
       - name: Install asdf
         uses: asdf-vm/actions/setup@v1
         with:
-          asdf_branch: v0.9.0
+          asdf_branch: v0.10.2
 
       - name: Install Golang (for installing odo from Git refs)
         run: |
           asdf plugin-add golang https://github.com/kennyp/asdf-golang.git
-          asdf install golang 1.16.15
-          asdf global golang 1.16.15
+          asdf install golang 1.17.13
+          asdf global golang 1.17.13
 
       - name: Install plugin manually
         run: |
