--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -92,8 +92,8 @@ jobs:
         env:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
-          asdf install odo git-ref:$GIT_REF
-          asdf global odo git-ref:$GIT_REF
+          asdf install odo ref:$GIT_REF
+          asdf global odo ref:$GIT_REF
 
       - name: Test odo using Git ref (${{ matrix.git_ref }}) from upstream repo
         env:
@@ -118,7 +118,7 @@ jobs:
         git_ref: [docs-getting-started-order, 2c6c9f1a418c6620026a1d9908f268083a706e35]
     runs-on: windows-2019  
     env:
-      ASDF_TOOL_REPO: "https://github.com/rm3l/odo"
+      ASDF_GITHUB_REPO_FOR_ODO: "https://github.com/rm3l/odo"
     steps:
       - uses: Vampire/setup-wsl@v1
 
@@ -150,17 +150,17 @@ jobs:
         env:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
-          asdf install odo git-ref:$GIT_REF
-          asdf global odo git-ref:$GIT_REF
+          asdf install odo ref:$GIT_REF
+          asdf global odo ref:$GIT_REF
 
       - name: Test odo using Git ref (${{ matrix.git_ref }}) from fork repo
         env:
           GIT_REF: ${{ matrix.git_ref }}
         run: |
           export GLOBALODOCONFIG="${HOME}/.config/odo/config.yaml"
-          res=$(odo version | grep -F "(${GIT_REF}@${ASDF_TOOL_REPO})" || echo false)
+          res=$(odo version | grep -F "(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})" || echo false)
           if [[ "$res" == "false" ]]; then
             version_output=$(odo version 2>&1 || true)
-            echo "Expected 'odo version' to contain \"(${GIT_REF}@${ASDF_TOOL_REPO})\", but got $version_output"
+            echo "Expected 'odo version' to contain \"(${GIT_REF}@${ASDF_GITHUB_REPO_FOR_ODO})\", but got $version_output"
             exit 1
           fi
