chore(CI): Test the new 'asdf odo preference' subcommands

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,79 @@ jobs:
             exit 1
           fi
 
+  plugin_extension_preference_tests:
+    name: asdf odo preference
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install asdf
+        uses: asdf-vm/actions/setup@v1
+        with:
+          asdf_branch: v0.10.2
+
+      - name: Install plugin manually
+        run: |
+          mkdir -p ~/.asdf/plugins
+          ln -snf "$(pwd)" ~/.asdf/plugins/odo
+
+      - name: Install latest odo
+        run: |
+          asdf install odo latest
+          asdf global odo latest
+
+      - name: Check that 'asdf odo preference which' works correctly even if GLOBALODOCONFIG preference is not set
+        run: |
+          unset GLOBALODOCONFIG
+          ret=$(asdf odo preference which)
+          if [[ "$ret" != "${HOME}/.config/odo/settings.yaml" ]]; then
+            echo "ret: $ret"
+            echo "unexpected output for 'asdf odo preference which'. Expected: ${HOME}/.config/odo/settings.yaml"
+            exit 1
+          fi
+
+      - name: Check that 'asdf odo preference which' works correctly if GLOBALODOCONFIG preference is set by user
+        run: |
+          export GLOBALODOCONFIG=/tmp/config/odo_settings.yaml
+          ret=$(asdf odo preference which)
+          if [[ "$ret" != "${GLOBALODOCONFIG}" ]]; then
+            echo "ret: $ret"
+            echo "unexpected output for 'asdf odo preference which'. Expected: ${GLOBALODOCONFIG}"
+            exit 1
+          fi
+
+      - name: Check that 'asdf odo preference reset' does not exit if GLOBALODOCONFIG does not exist
+        run: |
+          export GLOBALODOCONFIG=/tmp/404/some.file
+          asdf odo preference reset || exit 1
+          if [ -f "${GLOBALODOCONFIG}" ]; then
+            echo "File should still be inexistent after running 'asdf odo preference reset': ${GLOBALODOCONFIG}"
+            exit 1
+          fi
+
+      - name: Check that 'asdf odo preference reset' works correctly if GLOBALODOCONFIG preference is set by user
+        run: |
+          export GLOBALODOCONFIG=/tmp/config/odo_settings.yaml
+          mkdir -p "$(dirname "${GLOBALODOCONFIG}")"
+          cp -vr ./.github/.odo_config.yaml "${GLOBALODOCONFIG}"
+          (yes || true) | asdf odo preference reset
+          if [ -f "${GLOBALODOCONFIG}" ]; then
+            echo "File should have been removed by 'asdf odo preference reset': ${GLOBALODOCONFIG}"
+            exit 1
+          fi
+
+      - name: Check that 'asdf odo preference reset' works correctly even if GLOBALODOCONFIG preference is not set
+        run: |
+          unset GLOBALODOCONFIG
+          mkdir -p "${HOME}/.config/odo/"
+          cp -vr ./.github/.odo_config.yaml "${HOME}/.config/odo/settings.yaml"
+          (yes || true) | asdf odo preference reset
+          if [ -f "${HOME}/.config/odo/settings.yaml" ]; then
+            echo "File should have been removed by 'asdf odo preference reset': ${HOME}/.config/odo/settings.yaml"
+            exit 1
+          fi
+
   plugin_test_specific_version:
     name: Test installing specific version
     strategy:
