--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        version: ["2.0.0", "2.5.1", "3.0.0-beta3", "3.0.0-rc1"]
+        version: ["2.5.1", "3.0.0-rc2", "3.15.0"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -208,8 +208,8 @@ jobs:
       - name: Install Golang (for installing odo from Git refs)
         run: |
           asdf plugin-add golang https://github.com/kennyp/asdf-golang.git
-          asdf install golang 1.17.13
-          asdf global golang 1.17.13
+          asdf install golang 1.19.13
+          asdf global golang 1.19.13
 
       - name: Install plugin manually
         run: |
@@ -262,8 +262,8 @@ jobs:
       - name: Install Golang (for installing odo from Git refs)
         run: |
           asdf plugin-add golang https://github.com/kennyp/asdf-golang.git
-          asdf install golang 1.17.13
-          asdf global golang 1.17.13
+          asdf install golang 1.19.13
+          asdf global golang 1.19.13
 
       - name: Install plugin manually
         run: |
